Add missing progress dates.

--- a/src/index.html
+++ b/src/index.html
@@ -28,12 +28,18 @@
             </button>
         </div>
     </div>
+    <div class="cansat-section" id="js-eva-section">
+        <h1 class="section-title">CanSat</h1>
+        <div class="content">
+            <p class="text">Jsme tým studentům účastnící se soutěže <a href="https://esero.sciencein.cz/cansat" class="link">CanSat</a>. Naším cílem je vytvořit satelit o velikosti plechovky. Nejsme na to sami, pomáhají nám dva androidi - EVA a TOM.</p>
+        </div>
+    </div>
     <div class="cansat-section eva-section" id="js-eva-section">
         <h1 class="section-title">EVA</h1>
         <div class="content">
             <img class="image" src="./images/eva.png" alt="EVA">
             <div class="text-content">
-                <p class="text">EVA je náš satelit a zároveň klíčový prvek naší mise. Během svého pádu bude měřit
+                <p class="text">EVA (Environmental Vocation Architecture) je náš satelit a zároveň klíčový prvek naší mise. Během svého pádu bude měřit
                     spoustu hodnot. <br><span class="bold">Měřené hodnoty:</span></p>
                 <ul class="measured-values">
                     <li class="measured-value">
@@ -63,8 +69,8 @@
         <div class="content">
             <img class="image" src="./images/tom.png" alt="TOM">
             <div class="text-content">
-                <p class="text">To je naše pozemní přijímací stanice. Je k němu připojena anténa a přijímá data, která
-                    mu pošle EVA. Tyto dále zobrazuje na svém displeji a dále přes USB pošle do připojeného počítače.
+                <p class="text">TOM (Technical Operation Machine) je naše pozemní přijímací stanice. Je k němu připojena anténa a přijímá data, která
+                    mu pošle EVA. Tyto data zobrazuje na svém displeji a dále přes USB posílá do připojeného počítače.
                 </p>
             </div>
         </div>
@@ -166,6 +172,62 @@
                     </div>
                     <div class="dot"></div>
                 </div>
+                <div class="progress-item">
+                    <div class="content">
+                        <h2 class="item-title">Další testy antény</h2>
+                        <h3 class="item-date">25. 3. 2019</h3>
+                        <p class="item-text">Proběhli další testy antény na větší vzdálenosti.</p>
+                    </div>
+                    <div class="dot"></div>
+                </div>
+                <div class="progress-item hide">
+                    <div class="content">
+                        <h2 class="item-title">Konstrukce</h2>
+                        <h3 class="item-date">12. 4. 2019</h3>
+                        <p class="item-text">Dokončujeme modely konstrukce.</p>
+                    </div>
+                    <div class="dot"></div>
+                </div>
+                <div class="progress-item">
+                    <div class="content">
+                        <h2 class="item-title">Software pro EVU a TOMA</h2>
+                        <h3 class="item-date">18. 4. 2019</h3>
+                        <p class="item-text">Dokončujeme software pro naše androidy EVA a TOMA.</p>
+                    </div>
+                    <div class="dot"></div>
+                </div>
+                <div class="progress-item hide">
+                    <div class="content">
+                        <h2 class="item-title">Test padáku</h2>
+                        <h3 class="item-date">19. 4. 2019</h3>
+                        <p class="item-text">Úspěšně testujeme oba padáky na rozhledně <a href="https://www.google.com/maps/place/lookout+Mil%C3%AD%C5%99e/@50.154284,15.8314546,17z/data=!3m1!4b1!4m5!3m4!1s0x470dd33fc67b22b3:0x177c884feaff068e!8m2!3d50.1542806!4d15.8336485">Milíř</a>.</p>
+                    </div>
+                    <div class="dot"></div>
+                </div>
+                <div class="progress-item">
+                    <div class="content">
+                        <h2 class="item-title">Pájení</h2>
+                        <h3 class="item-date">20. 4. 2019</h3>
+                        <p class="item-text">Úspěšně jsme zapájeli celý obvod.</p>
+                    </div>
+                    <div class="dot"></div>
+                </div>
+                <div class="progress-item hide">
+                    <div class="content">
+                        <h2 class="item-title">Dashboard</h2>
+                        <h3 class="item-date">20. 4. 2019</h3>
+                        <p class="item-text">Dokončujeme grafový dashboard.</p>
+                    </div>
+                    <div class="dot"></div>
+                </div>
+                <div class="progress-item">
+                    <div class="content">
+                        <h2 class="item-title">Finálový report</h2>
+                        <h3 class="item-date">21. 4. 2019</h3>
+                        <p class="item-text">Odeslali jsme finálový report.</p>
+                    </div>
+                    <div class="dot"></div>
+                </div>
             </div>
             <div class="even-progress-container">
                 <div class="progress-item hide">
@@ -259,6 +321,62 @@
                         <a href="https://www.facebook.com/CharlesIVcansat/posts/640744063032285?__xts__[0]=68.ARDBcTKjbRycxLqEZRpPpUwT_xxGJMcTQUOiRfK2rGUD4LdxOSjfbKtRV6BfN5vQpCUsnu4QzJm9u3q4OtyQvH0kLdyNxqSakPjZ_azBffFalEUHgfbrBtBMvasOov0hrWtGT4yHIklbcB921R1uFPo8IHiO5AO56K7mCP_MJ1Qrr6mIw2ak0sfp9ZjS1TqdHwwUNAR7ucgObRMYg44rGu7KQ9FEsWrssRZzhq9Gn8Pz7K6H68p2u8n4KcI31CKSCprW7xImrX6_VgesQkbnXSUS9t8lRvqWx7zB68hIzL9r3FLYaekoA5VAGYuI6GfLhCKUGTihEhf8V-zuWfk&__tn__=-R"
                             target="_blank" class="item-link">Detail</a>
                     </div>
+                </div>
+                <div class="progress-item hide">
+                    <div class="dot"></div>
+                    <div class="content">
+                        <h2 class="item-title">Další testy antény</h2>
+                        <h3 class="item-date">25. 3. 2019</h3>
+                        <p class="item-text">Proběhli další testy antény na větší vzdálenosti.</p>
+                    </div>
+                </div>
+                <div class="progress-item">
+                    <div class="dot"></div>
+                    <div class="content">
+                        <h2 class="item-title">Konstrukce</h2>
+                        <h3 class="item-date">12. 4. 2019</h3>
+                        <p class="item-text">Dokončujeme modely konstrukce.</p>
+                    </div>
+                </div>
+                <div class="progress-item hide">
+                    <div class="dot"></div>
+                    <div class="content">
+                        <h2 class="item-title">Software pro EVU a TOMA</h2>
+                        <h3 class="item-date">18. 4. 2019</h3>
+                        <p class="item-text">Dokončujeme software pro naše androidy EVA a TOMA.</p>
+                    </div>
+                </div>
+                <div class="progress-item">
+                    <div class="dot"></div>
+                    <div class="content">
+                        <h2 class="item-title">Test padáku</h2>
+                        <h3 class="item-date">19. 4. 2019</h3>
+                        <p class="item-text">Úspěšně testujeme oba padáky na rozhledně <a href="https://www.google.com/maps/place/lookout+Mil%C3%AD%C5%99e/@50.154284,15.8314546,17z/data=!3m1!4b1!4m5!3m4!1s0x470dd33fc67b22b3:0x177c884feaff068e!8m2!3d50.1542806!4d15.8336485">Milíř</a>.</p>
+                    </div>
+                </div>
+                <div class="progress-item hide">
+                    <div class="dot"></div>
+                    <div class="content">
+                        <h2 class="item-title">Pájení</h2>
+                        <h3 class="item-date">20. 4. 2019</h3>
+                        <p class="item-text">Úspěšně jsme zapájeli celý obvod.</p>
+                    </div>
+                </div>
+                <div class="progress-item">
+                    <div class="dot"></div>
+                    <div class="content">
+                        <h2 class="item-title">Dashboard</h2>
+                        <h3 class="item-date">20. 4. 2019</h3>
+                        <p class="item-text">Dokončujeme grafový dashboard.</p>
+                    </div>
+                </div>
+                <div class="progress-item hide">
+                    <div class="content">
+                        <h2 class="item-title">Finálový report</h2>
+                        <h3 class="item-date">21. 4. 2019</h3>
+                        <p class="item-text">Odeslali jsme finálový report.</p>
+                    </div>
+                    <div class="dot"></div>
                 </div>
             </div>
         </div>
