Add missing sponsors.

--- a/src/index.html
+++ b/src/index.html
@@ -429,10 +429,22 @@
                 <img src="./images/arduino-shop-cz.png" class="logo" alt="ARDUINO-SHOP.CZ">
             </a>
             <a href="https://www.svitilny.eu/" target="_blank" class="sponsor svitilny">
-                <img src="./images/svitilny.eu.jpg" class="logo" alt="">
+                <img src="./images/svitilny.eu.jpg" class="logo" alt="Svitilny.eu">
             </a>
             <a href="http://www.radio-shop.cz/" target="_blank" class="sponsor radio-shop">
-                <img src="./images/radio-shop.jpg" class="logo" alt="">
+                <img src="./images/radio-shop.jpg" class="logo" alt="radio-shop.cz">
+            </a>
+            <a href="http://www.gradient.cx/" target="_blank" class="sponsor gradient">
+                <img src="./images/gradient.jpg" class="logo" alt="gradient">
+            </a>
+            <a href="https://www.pelikandaniel.com/" target="_blank" class="sponsor p-one-team">
+                <img src="./images/p-one-team.jpg" class="logo" alt="P One Team">
+            </a>
+            <a href="https://infinitypv.com/" target="_blank" class="sponsor infinity-pv">
+                <img src="./images/pv-infinity.jpg" class="logo" alt="infinityPV">
+            </a>
+            <a href="https://www.trivox.cz/" target="_blank" class="sponsor trivox">
+                <img src="./images/trivox.jpg" class="logo" alt="trivox">
             </a>
         </div>
         <p class="text">Chcete nás podpořit? Kontaktujte nás na email: <a href="mailto:info@charles4th.cz"
