Update mission progress.

--- a/src/index.html
+++ b/src/index.html
@@ -228,6 +228,22 @@
                     </div>
                     <div class="dot"></div>
                 </div>
+                <div class="progress-item hide">
+                    <div class="content">
+                        <h2 class="item-title">Finální testy konstrukce</h2>
+                        <h3 class="item-date">22. 4. 2019</h3>
+                        <p class="item-text">Úspěšně jsme provedli finální test konstrukce.</p>
+                    </div>
+                    <div class="dot"></div>
+                </div>
+                <div class="progress-item">
+                    <div class="content">
+                        <h2 class="item-title">Národní finále</h2>
+                        <h3 class="item-date">25.–26. 4. 2019</h3>
+                        <a href="https://esero.sciencein.cz/articles/view/156-" target="_blank" class="item-link">Detail</a>
+                    </div>
+                    <div class="dot"></div>
+                </div>
             </div>
             <div class="even-progress-container">
                 <div class="progress-item hide">
@@ -371,10 +387,26 @@
                     </div>
                 </div>
                 <div class="progress-item hide">
+                    <div class="dot"></div>
                     <div class="content">
                         <h2 class="item-title">Finálový report</h2>
                         <h3 class="item-date">21. 4. 2019</h3>
                         <p class="item-text">Odeslali jsme finálový report.</p>
+                    </div>
+                </div>
+                <div class="progress-item">
+                    <div class="dot"></div>
+                    <div class="content">
+                        <h2 class="item-title">Finální testy konstrukce</h2>
+                        <h3 class="item-date">22. 4. 2019</h3>
+                        <p class="item-text">Úspěšně jsme provedli finálový test konstrukce.</p>
+                    </div>
+                </div>
+                <div class="progress-item hide">
+                    <div class="content">
+                        <h2 class="item-title">Národní finále</h2>
+                        <h3 class="item-date">25.–26. 4. 2019</h3>
+                        <a href="https://esero.sciencein.cz/articles/view/156-" target="_blank" class="item-link">Detail</a>
                     </div>
                     <div class="dot"></div>
                 </div>
