--- a/src/index.html
+++ b/src/index.html
@@ -238,9 +238,10 @@
                 </div>
                 <div class="progress-item">
                     <div class="content">
-                        <h2 class="item-title">Národní finále</h2>
+                        <h2 class="item-title">1. místo v národní finále</h2>
                         <h3 class="item-date">25.–26. 4. 2019</h3>
-                        <a href="https://esero.sciencein.cz/articles/view/156-" target="_blank" class="item-link">Detail</a>
+                        <p class="item-text">Vyhráli jsme národní finále a budeme reprezentovat ČR v evropském finále.</p>
+                        <a href="https://www.facebook.com/CharlesIVcansat/posts/657434911363200" target="_blank" class="item-link">Detail</a>
                     </div>
                     <div class="dot"></div>
                 </div>
@@ -403,12 +404,13 @@
                     </div>
                 </div>
                 <div class="progress-item hide">
-                    <div class="content">
-                        <h2 class="item-title">Národní finále</h2>
-                        <h3 class="item-date">25.–26. 4. 2019</h3>
-                        <a href="https://esero.sciencein.cz/articles/view/156-" target="_blank" class="item-link">Detail</a>
-                    </div>
                     <div class="dot"></div>
+                    <div class="content">
+                        <h2 class="item-title">1. místo v národní finále</h2>
+                        <h3 class="item-date">25.–26. 4. 2019</h3>
+                        <p class="item-text">Vyhráli jsme národní finále a budeme reprezentovat ČR v evropském finále.</p>
+                        <a href="https://www.facebook.com/CharlesIVcansat/posts/657434911363200" target="_blank" class="item-link">Detail</a>
+                    </div>
                 </div>
             </div>
         </div>
