Update team roles.

--- a/src/index.html
+++ b/src/index.html
@@ -419,11 +419,11 @@
         <h1 class="team-title">Tým</h1>
         <div class="members-container">
             <div class="team-member">
-                <img class="member-profile" src="./images/petr-pliva.jpg" alt="Petr Plíva">
-                <h2 class="member-name">Petr Plíva</h2>
-                <h3 class="member-position">Velitel, hardware</h2>
-                    <a href="mailto:petr@charles4th.cz" class="member-email">petr@charles4th.cz</a>
-            </div>
+                <img class="member-profile" src="./images/lukas-valta.jpg" alt="Lukáš Valta">
+                <h2 class="member-name">Lukáš Valta</h2>
+                <h3 class="member-position">Velitel, propagace</h2>
+                    <a href="mailto:lukas@charles4th.cz" class="member-email">lukas@charles4th.cz</a>
+            </div>            
             <div class="team-member">
                 <img class="member-profile" src="./images/vaclav-pavlicek.jpg" alt="Václav Pavlíček">
                 <h2 class="member-name">Václav Pavlíček</h2>
@@ -437,10 +437,10 @@
                     <a href="mailto:daniel@charles4th.cz" class="member-email">daniel@charles4th.cz</a>
             </div>
             <div class="team-member">
-                <img class="member-profile" src="./images/lukas-valta.jpg" alt="Lukáš Valta">
-                <h2 class="member-name">Lukáš Valta</h2>
-                <h3 class="member-position">Propagace, grafika</h2>
-                    <a href="mailto:lukas@charles4th.cz" class="member-email">lukas@charles4th.cz</a>
+                <img class="member-profile" src="./images/petr-pliva.jpg" alt="Petr Plíva">
+                <h2 class="member-name">Petr Plíva</h2>
+                <h3 class="member-position">Hardware</h2>
+                    <a href="mailto:petr@charles4th.cz" class="member-email">petr@charles4th.cz</a>
             </div>
             <div class="team-member">
                 <img class="member-profile" src="./images/marek-dittrich.jpg" alt="Marek Dittrich">
