Fix grammar error.

--- a/src/index.html
+++ b/src/index.html
@@ -176,7 +176,7 @@
                     <div class="content">
                         <h2 class="item-title">Další testy antény</h2>
                         <h3 class="item-date">25. 3. 2019</h3>
-                        <p class="item-text">Proběhli další testy antény na větší vzdálenosti.</p>
+                        <p class="item-text">Proběhly další testy antény na větší vzdálenosti.</p>
                     </div>
                     <div class="dot"></div>
                 </div>
@@ -344,7 +344,7 @@
                     <div class="content">
                         <h2 class="item-title">Další testy antény</h2>
                         <h3 class="item-date">25. 3. 2019</h3>
-                        <p class="item-text">Proběhli další testy antény na větší vzdálenosti.</p>
+                        <p class="item-text">Proběhly další testy antény na větší vzdálenosti.</p>
                     </div>
                 </div>
                 <div class="progress-item">
