Update team roles.

--- a/src/index.html
+++ b/src/index.html
@@ -430,7 +430,7 @@
             <div class="team-member">
                 <img class="member-profile" src="./images/daniel-dworschak.jpg" alt="Daniel Dworschak">
                 <h2 class="member-name">Daniel Dworschak</h2>
-                <h3 class="member-position">Construction, graphics</h2>
+                <h3 class="member-position">Construction</h2>
                     <a href="mailto:daniel@charles4th.cz" class="member-email">daniel@charles4th.cz</a>
             </div>
             <div class="team-member">
