--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-    <div class="header-section">
+    <div class="header-section" id="js-header-section">
         <div class="gradient-container">
             <img src="./images/logo.png" alt="Our logo" class="logo" id="js-logo">
             <button onclick="scrollDown()" class="arrow-down-button" id="js-arrow-down-button">
