Add language flags.

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,6 @@
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="675">
 </head>
-
 <body>
     <div class="header-section" id="js-header-section">
         <div class="gradient-container">
@@ -27,13 +26,21 @@
                 <img src="./images/arrow-down.svg" alt="Arrow down" class="arrow-down">
             </button>
         </div>
+        <div class="flags-container">
+            <a href="/en">
+                <img src="images/flags/uk.png" alt="EN" class="flag">
+            </a>
+            <a href="/cs">
+                <img src="images/flags/cz.png" alt="CZ" class="flag">
+            </a>
+        </div>
     </div>
     <div class="cansat-section" id="js-eva-section">
         <h1 class="section-title">CanSat</h1>
         <div class="content">
             <p class="text">We are team of students participating in <a href="https://esero.sciencein.cz/cansat" class="link">CanSat</a> competition. Our goal is to make a satellite size of can. We're not alone, we also have two androids in our team - EVA and TOM.</p>
         </div>
-    </div>
+    </div>   
     <div class="cansat-section eva-section" id="js-eva-section">
         <h1 class="section-title">EVA</h1>
         <div class="content">
