Add articles section template.

--- a/src/index.html
+++ b/src/index.html
@@ -419,6 +419,64 @@
             </div>
         </div>
     </div>
+    <div class="articles-section">
+        <h1 class="section-title">Articles</h1>
+        <div class="articles-grid">
+            <div class="article">
+                <h2 class="article-title">Article title</h2>
+                <p class="article-text">Article text article text article text article text article text article text article text article text article text article text text article text article text article text article text article text article text article text article text article text</p>
+                <a class="article-link" href="#">Read more</a>
+                <div class="logo-container">
+                    <img src="./images/trivox.jpg" class="article-logo" alt="logo">
+                </div>
+            </div>
+            <div class="article">
+                <h2 class="article-title">Article title</h2>
+                <p class="article-text">Article text article text article text article text article text article text article text article text article text article text text article text article text article text article text article text article text article text article text article text</p>
+                <a class="article-link" href="#">Read more</a>
+                <div class="logo-container">
+                    <img src="./images/trivox.jpg" class="article-logo" alt="logo">
+                </div>
+            </div>
+            <div class="article">
+                <h2 class="article-title">Article title</h2>
+                <p class="article-text">Article text article text article text article text article text article text article text article text article text article text text article text article text article text article text article text article text article text article text article text</p>
+                <a class="article-link" href="#">Read more</a>
+                <div class="logo-container">
+                    <img src="./images/trivox.jpg" class="article-logo" alt="logo">
+                </div>
+            </div>
+            <div class="article">
+                <h2 class="article-title">Article title</h2>
+                <p class="article-text">Article text article text article text article text article text article text article text article text article text article text text article text article text article text article text article text article text article text article text article text</p>
+                <a class="article-link" href="#">Read more</a>
+                <div class="logo-container">
+                    <img src="./images/trivox.jpg" class="article-logo" alt="logo">
+                </div>
+            </div>
+            <div class="article hidden">
+                <h2 class="article-title">Article title</h2>
+                <p class="article-text">Article text article text article text article text article text article text article text article text article text article text text article text article text article text article text article text article text article text article text article text</p>
+                <a class="article-link" href="#">Read more</a>
+                <div class="logo-container">
+                    <img src="./images/trivox.jpg" class="article-logo" alt="logo">
+                </div>
+            </div>
+            <div class="article hidden">
+                <h2 class="article-title">Article title</h2>
+                <p class="article-text">Article text article text article text article text article text article text article text article text article text article text text article text article text article text article text article text article text article text article text article text</p>
+                <a class="article-link" href="#">Read more</a>
+                <div class="logo-container">
+                    <img src="./images/trivox.jpg" class="article-logo" alt="logo">
+                </div>
+            </div>
+        </div>
+        <div class="button-section">
+            <button class="more-articles-button">
+                More articles
+            </button>
+        </div>
+    </div>
     <div class="team-section">
         <h1 class="team-title">Team</h1>
         <div class="members-container">
