Add showing all articles.

--- a/src/index.html
+++ b/src/index.html
@@ -472,7 +472,7 @@
             </div>
         </div>
         <div class="button-section">
-            <button class="more-articles-button">
+            <button id="js-more-articles-button" class="more-articles-button" onclick="window.showAllArticles()">
                 More articles
             </button>
         </div>
