Update team members.

--- a/src/index.html
+++ b/src/index.html
@@ -26,14 +26,14 @@
                 <img src="./images/arrow-down.svg" alt="Arrow down" class="arrow-down">
             </button>
         </div>
-        <div class="flags-container">
+        <!--<div class="flags-container">
             <a href="/en">
                 <img src="images/flags/uk.png" alt="EN" class="flag">
             </a>
             <a href="/cs">
                 <img src="images/flags/cz.png" alt="CZ" class="flag">
             </a>
-        </div>
+        </div>-->
     </div>
     <div class="cansat-section" id="js-eva-section">
         <h1 class="section-title">CanSat</h1>
@@ -419,7 +419,7 @@
             </div>
         </div>
     </div>
-    <div class="articles-section">
+    <!--<div class="articles-section">
         <h1 class="section-title">Articles</h1>
         <div class="articles-grid">
             <div class="article">
@@ -476,7 +476,7 @@
                 More articles
             </button>
         </div>
-    </div>
+    </div>-->
     <div class="team-section">
         <h1 class="team-title">Team</h1>
         <div class="members-container">
@@ -499,6 +499,12 @@
                     <a href="mailto:daniel@charles4th.cz" class="member-email">daniel@charles4th.cz</a>
             </div>
             <div class="team-member">
+                <img class="member-profile" src="./images/tomas-forejt.jpg" alt="Tomáš Forejt">
+                <h2 class="member-name">Tomáš Forejt</h2>
+                <h3 class="member-position">Firmware</h2>
+                <a href="mailto:tomas@charles4th.cz" class="member-email">tomas@charles4th.cz</a>
+            </div>
+            <div class="team-member">
                 <img class="member-profile" src="./images/petr-pliva.jpg" alt="Petr Plíva">
                 <h2 class="member-name">Petr Plíva</h2>
                 <h3 class="member-position">Hardware</h2>
@@ -513,7 +519,7 @@
         </div>
     </div>
     <div class="sponsors-section">
-        <h1 class="section-title">Partners</h1>
+        <h1 class="section-title">Sponsors</h1>
         <div class="sponsors-container">
             <a href="http://www.spse.cz/" target="_blank" class="sponsor spse">
                 <img src="./images/spse.jpg" class="logo" alt="SPŠE a VOŠ Pardubice">
@@ -543,7 +549,7 @@
                 <img src="./images/trivox.jpg" class="logo" alt="trivox">
             </a>
         </div>
-        <p class="text">Would like to become our partner? Feel free to contact us at: <a href="mailto:info@charles4th.cz"
+        <p class="text">Would like to become our sponsor? Feel free to contact us at: <a href="mailto:info@charles4th.cz"
                 class="link">info@charles4th.cz</a>.</p>
     </div>
     <div class="socials-section">
