Update sponsor logos.

--- a/src/index.html
+++ b/src/index.html
@@ -481,37 +481,37 @@
         <h1 class="team-title">Team</h1>
         <div class="members-container">
             <div class="team-member">
-                <img class="member-profile" src="./images/lukas-valta.jpg" alt="Lukáš Valta">
+                <img class="member-profile" src="./images/photos/lukas-valta.jpg" alt="Lukáš Valta">
                 <h2 class="member-name">Lukáš Valta</h2>
                 <h3 class="member-position">Leader, propagation</h2>
                     <a href="mailto:lukas@charles4th.cz" class="member-email">lukas@charles4th.cz</a>
             </div>            
             <div class="team-member">
-                <img class="member-profile" src="./images/vaclav-pavlicek.jpg" alt="Václav Pavlíček">
+                <img class="member-profile" src="./images/photos/vaclav-pavlicek.jpg" alt="Václav Pavlíček">
                 <h2 class="member-name">Václav Pavlíček</h2>
                 <h3 class="member-position">Software</h2>
                     <a href="mailto:vaclav@charles4th.cz" class="member-email">vaclav@charles4th.cz</a>
             </div>
             <div class="team-member">
-                <img class="member-profile" src="./images/daniel-dworschak.jpg" alt="Daniel Dworschak">
+                <img class="member-profile" src="./images/photos/daniel-dworschak.jpg" alt="Daniel Dworschak">
                 <h2 class="member-name">Daniel Dworschak</h2>
                 <h3 class="member-position">Construction</h2>
                     <a href="mailto:daniel@charles4th.cz" class="member-email">daniel@charles4th.cz</a>
             </div>
             <div class="team-member">
-                <img class="member-profile" src="./images/tomas-forejt.jpg" alt="Tomáš Forejt">
+                <img class="member-profile" src="./images/photos/tomas-forejt.jpg" alt="Tomáš Forejt">
                 <h2 class="member-name">Tomáš Forejt</h2>
                 <h3 class="member-position">Firmware</h2>
                 <a href="mailto:tomas@charles4th.cz" class="member-email">tomas@charles4th.cz</a>
             </div>
             <div class="team-member">
-                <img class="member-profile" src="./images/petr-pliva.jpg" alt="Petr Plíva">
+                <img class="member-profile" src="./images/photos/petr-pliva.jpg" alt="Petr Plíva">
                 <h2 class="member-name">Petr Plíva</h2>
                 <h3 class="member-position">Hardware</h2>
                     <a href="mailto:petr@charles4th.cz" class="member-email">petr@charles4th.cz</a>
             </div>
             <div class="team-member">
-                <img class="member-profile" src="./images/marek-dittrich.jpg" alt="Marek Dittrich">
+                <img class="member-profile" src="./images/photos/marek-dittrich.jpg" alt="Marek Dittrich">
                 <h2 class="member-name">Marek Dittrich</h2>
                 <h3 class="member-position">Hardware</h2>
                     <a href="mailto:marek@charles4th.cz" class="member-email">marek@charles4th.cz</a>
@@ -522,31 +522,43 @@
         <h1 class="section-title">Sponsors</h1>
         <div class="sponsors-container">
             <a href="http://www.spse.cz/" target="_blank" class="sponsor spse">
-                <img src="./images/spse.jpg" class="logo" alt="SPŠE a VOŠ Pardubice">
+                <img src="./images/sponsors/spse.jpg" class="logo" alt="SPŠE a VOŠ Pardubice">
             </a>
             <a href="https://www.prusa3d.com/" target="_blank" class="sponsor prusa-research">
-                <img src="./images/prusaresearch-logo.png" class="logo" alt="PRUSA RESEARCH by JOSEF PRUSA">
+                <img src="./images/sponsors/prusaresearch-logo.png" class="logo" alt="PRUSA RESEARCH by JOSEF PRUSA">
             </a>
             <a href="https://arduino-shop.cz/" target="_blank" class="sponsor arduino-shop">
-                <img src="./images/arduino-shop-cz.png" class="logo" alt="ARDUINO-SHOP.CZ">
+                <img src="./images/sponsors/arduino-shop-cz.png" class="logo" alt="ARDUINO-SHOP.CZ">
             </a>
             <a href="https://www.svitilny.eu/" target="_blank" class="sponsor svitilny">
-                <img src="./images/svitilny.eu.jpg" class="logo" alt="Svitilny.eu">
+                <img src="./images/sponsors/svitilny.eu.jpg" class="logo" alt="Svitilny.eu">
             </a>
             <a href="http://www.radio-shop.cz/" target="_blank" class="sponsor radio-shop">
-                <img src="./images/radio-shop.jpg" class="logo" alt="radio-shop.cz">
+                <img src="./images/sponsors/radio-shop.jpg" class="logo" alt="radio-shop.cz">
             </a>
             <a href="http://www.gradient.cx/" target="_blank" class="sponsor gradient">
-                <img src="./images/gradient.jpg" class="logo" alt="gradient">
+                <img src="./images/sponsors/gradient.jpg" class="logo" alt="gradient">
             </a>
             <a href="https://www.pelikandaniel.com/" target="_blank" class="sponsor p-one-team">
-                <img src="./images/p-one-team.jpg" class="logo" alt="P One Team">
-            </a>
-            <a href="https://infinitypv.com/" target="_blank" class="sponsor infinity-pv">
-                <img src="./images/pv-infinity.jpg" class="logo" alt="infinityPV">
+                <img src="./images/sponsors/p-one-team.jpg" class="logo" alt="P One Team">
             </a>
             <a href="https://www.trivox.cz/" target="_blank" class="sponsor trivox">
-                <img src="./images/trivox.jpg" class="logo" alt="trivox">
+                <img src="./images/sponsors/trivox.jpg" class="logo" alt="trivox">
+            </a>
+            <a href="https://www.mff.cuni.cz/en" target="_blank" class="sponsor mff">
+                <img src="./images/sponsors/mff.png" class="logo" alt="Faculty of mathematics and physics Charles University">
+            </a>
+            <a href="https://www.jcmf.cz/" target="_blank" class="sponsor jcmf">
+                <img src="./images/sponsors/jcmf.png" class="logo" alt="The Union of Czech Mathematicians and Physicists">
+            </a>
+            <a href="https://www.jcmf.cz/?q=en/taxonomy/term/5" target="_blank" class="sponsor cfs">
+                <img src="./images/sponsors/cfs.png" class="logo" alt="Česká fyzikální společnost">
+            </a>
+            <a href="https://www.fzu.cz/" target="_blank" class="sponsor fzu">
+                <img src="./images/sponsors/fzu.png" class="logo" alt="Fyzikální ústav AV ČR">
+            </a>
+            <a href="https://dcgi.fel.cvut.cz/" target="_blank" class="sponsor dcgi">
+                <img src="./images/sponsors/dcgi.png" class="logo" alt="DCGI">
             </a>
         </div>
         <p class="text">Would like to become our sponsor? Feel free to contact us at: <a href="mailto:info@charles4th.cz"
